# chev-shell

./: Cargo.toml  README.md  commands.md  history.txt
src/: lib.rs  main.rs
src/ai/: checker.rs  mimic.rs  mod.rs  ollama.rs
src/engine/: env.rs  executor.rs  jobs.rs  macros.rs  mod.rs  parser.rs
src/ui/: browser.rs  chat.rs  completion.rs  effects.rs  mod.rs  prompt.rs  protocol.rs  suggestions.rs  vibe.rs
tests/: ai_fix_tests.rs  ai_integration_tests.rs  integration_tests.rs  mimic_tests.rs
