[package]
name = "chev-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0.0"
libc = "0.2.180"
nix = "0.30.1"
nom = "8.0.0"
qdrant-client = "1.16.0"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
