[package]
name = "chev-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
bincode = "1.3"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
lancedb = "0.23.1"
libc = "0.2.180"
nix = "0.30.1"
nom = "8.0.0"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
which = "8.0.0"
